# netpred

./: Makefile  pyproject.toml  readme.md
netpred/: __init__.py  __main__.py  analysis.py  config.py  data.py  download.py  embedding.py  networks.py  sequences.py  training.py
notebooks/: accuracy.ipynb  attribution.ipynb  characterisation.ipynb
